--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,12 +34,16 @@
                 android:background="@drawable/btn_round_bg"
                 android:src="@drawable/ic_switch_day_night" />
 
-            <ImageView
+            <ru.skillbranch.devintensive.ui.custom.CircleImageView
                 android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/avatar_round_size_112"
                 android:layout_height="@dimen/avatar_round_size_112"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_avatar" />
+                android:src="@drawable/ic_avatar"
+                app:cv_borderColor="@color/color_accent_secondary"
+                app:cv_borderWidth="3dp"
+                android:scaleType="centerCrop"
+                />
 
             <ImageButton
                 android:id="@+id/btn_edit"
