--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,11 @@
 
     </style>
 
+    <style name="Theme.AppTheme.Launcher">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="colorPrimaryDark">@android:color/white</item>
+    </style>
+
     <style name="Profile.EditText" parent="Profile">
         <item name="android:textColor">?attr/colorPrimary</item>
         <item name="android:paddingTop">4dp</item>
